@@ -12,7 +12,7 @@
 		<languageKey index="default" type="array">
 			<label index="title">WEB &gt; PAGE MODULE</label>
 			<label index="default_introduction">If you wish to edit the content of a page, please click the page title in the page tree to the left.</label>
-			<label index="csh_whatisthetemplavoilapagemodule">What is the TemplaVoila page module?</label>
+			<label index="csh_whatisthetemplavoilapagemodule">What is the TemplaVoilá page module?</label>
 			<label index="createnewpage_selecttemplate">Select a template for your new page:</label>
 			<label index="createnewpage_defaultlayoutsubmitlabel">Create page with default layout</label>
 			<label index="createnewpage_templateobject_createemptypage">Create an empty page based on this template:</label>
